<resources>
    <string name="app_name">Test Ioasys 2</string>

    <!-- Login Activity -->
    <string name="login_welcome_ioasys">BEM-VINDO AO EMPRESAS</string>
    <string name="login_description_ioasys">Lorem ipsum dolor sit amet, contetur adipiscing elit. Nunc accumsan</string>
    <string name="login_email">Email</string>
    <string name="login_password">Senha</string>
    <string name="login_enter">Entrar</string>
    <string name="login_invalid_email">Email inválido</string>
    <string name="login_fill_field">Preencha este campo</string>

    <!-- Main Activity -->
    <string name="main_search">Pesquisar</string>
    <string name="main_guidance_message">Clique na busca para iniciar.</string>
    <string name="main_http_401_Unauthorized">HTTP 401 Unauthorized</string>
    <string name="main_search_not_found">Nenhuma empresa foi encontrada para a busca realizada.</string>

    <!-- Item Enterprise Layout -->
    <string name="item_enterprise_name">Empresa</string>
    <string name="item_enterprise_type">Negócio</string>
    <string name="item_enterprise_country">País</string>

    <!-- Details Activity -->
    <string name="details_description">description</string>
    <string name="details_enterprise_photo">enterprisePhoto</string>

    <!-- Global -->
    <string name="internet_connection_failure">Sem conexão com a internet</string>
    <string name="server_connection_problems">Problemas de conexão com o servidor</string>
    <string name="unauthorized_error_message">Credenciais informadas são inválidas, tente novamente.</string>
    <string name="generic_failure">Ocorreu um erro!</string>
    <string name="error">ERRO</string>
    <string name="ok">OK</string>
    <string name="ioasys_logo">ioasys logo</string>
    <string name="enterprise_photo_content_description">Foto da empresa</string>

</resources>