<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".presentation.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/loginIoasysImageView"
            android:layout_width="184dp"
            android:layout_height="46dp"
            android:layout_marginTop="62dp"
            android:importantForAccessibility="auto"
            android:src="@drawable/logo_home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/ioasys_logo" />

        <TextView
            android:id="@+id/loginWelcomeIoasysTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="106dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="106dp"
            android:text="@string/login_welcome_ioasys"
            android:textAlignment="center"
            android:textColor="@color/charcoal_grey"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginIoasysImageView" />

        <TextView
            android:id="@+id/loginDescriptionIoasysTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="44dp"
            android:text="@string/login_description_ioasys"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginWelcomeIoasysTextView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginEmailTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="44dp"
            android:textColorHint="@color/charcoal_grey"
            app:boxStrokeColor="@color/charcoal_grey"
            app:errorIconTint="@color/neon_red"
            app:errorTextColor="@color/neon_red"
            app:hintTextColor="@color/dark_beige"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginDescriptionIoasysTextView"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/medium_pink">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/beige"
                android:hint="@string/login_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/charcoal_grey"
                android:textColorHint="#616161"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginPasswordTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="44dp"
            android:textColorHint="@color/charcoal_grey"
            app:boxStrokeColor="@color/charcoal_grey"
            app:errorEnabled="false"
            app:errorIconTint="@color/neon_red"
            app:errorTextColor="@color/neon_red"
            app:hintTextColor="@color/dark_beige"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginEmailTextInputLayout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/charcoal_grey"
            app:startIconDrawable="@drawable/ic_padlock"
            app:startIconTint="@color/medium_pink">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/beige"
                android:hint="@string/login_password"
                android:inputType="numberPassword"
                android:textColor="@color/charcoal_grey"
                android:textColorHint="#616161" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginEnterButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="34dp"
            android:layout_marginEnd="44dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/greeny_blue"
            android:text="@string/login_enter"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginPasswordTextInputLayout"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>